fixed lik-dislike clear button alignment

--- a/assets/style.css
+++ b/assets/style.css
@@ -157,6 +157,18 @@ body {
     justify-content:space-between
 }
 
+.modal-footer i {
+    text-align: center;
+    margin-top: 5px;
+}
+
+
+.left-buttons {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .btn-success {
     margin-right: 5px;
     background-color: #00FFC2;
@@ -178,18 +190,21 @@ body {
     margin-left: 3px;
 }
 
+/* Close Button */
 .btn-light {
     box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.4);
     margin-left: 5px;
 }
 
-#clear-buttons i {
+#clear-buttons {
+    text-decoration: none;
+    border-style: none;
     font-size: 20px;
-    padding: 0px !important;
+    margin-left: 10px;
     color: #A0A7B7;
 }
 
-#clear-buttons:hover i {
+#clear-buttons:hover {
     color: black;
 }
 
